# ray-tracing-renderer

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  COMO_CORRER_TESTS.md  GUIA_RAMA_IMAGE.md  GUIA_RAMA_RENDERING.md  GUIA_RAMA_WRITER.md  Guia_sweep.md  Guia_sweep2.md  README.md  env.sh  launch_chunks.sh  launch_rest.sh  makefile
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
aos/: CMakeLists.txt
aos/include/: image.hpp  image_aos.hpp
aos/src/: image_aos.cpp  main.cpp
cmake/: TestUtils.cmake
common/: CMakeLists.txt
common/include/: camera.hpp  config_parser.hpp  constants.hpp  ppm_writer.hpp  raw_image.hpp  ray.hpp  renderer.hpp  rendering_engine.hpp  scene_parser.hpp
common/include/dataStructs/: aabb.hpp  bvh.hpp  camera_viewport.hpp  hit_record.hpp  material.hpp  object.hpp  settings_structs.hpp
common/include/utilities/: color_utils.hpp  random.hpp  random_par.hpp  vec3.hpp
common/src/: camera.cpp  config_parser.cpp  ppm_writer.cpp  renderer.cpp  scene_parser.cpp
common/src/dataStructs/: bvh.cpp
common/src/utilities/: compute_viewport.cpp  random.cpp
docs/: .$Diagrama sin título.drawio.bkp  Diagrama sin título.drawio  ECSdesign.md
docs/funciones/: WritePixelColor.md
functtests/: ftest.py
logs/: results_grain_sweep.csv  results_optimization.csv  results_scalability.csv  txt
memoria/: contrib.ods  report.typ
memoria/content/: anexos.typ  bibliografia.typ  concl.typ  design.typ  eval.typ  graphs.typ  ia.typ  modificaciones.typ  optim.typ  org.typ  paralelizacion.typ  test.typ
memoria/graphs/: analysis_image.csv  analysis_rendering.csv  (+9 more)
par/: CMakeLists.txt
par/include/: image.hpp  image_par.hpp
par/src/: image_par.cpp  main.cpp
scripts/: README.md
scripts_VIEJO/: run_all_tests.sh
soa/: CMakeLists.txt
soa/include/: image_soa.hpp
soa/src/: image_soa.cpp  main.cpp
utaos/: CMakeLists.txt  test_image_aos.cpp
utcommon/: CMakeLists.txt  test_camera.cpp  test_config_parser.cpp  test_ppm_writer.cpp  test_random.cpp  test_renderer.cpp  test_scene_parser.cpp  test_vector.cpp
utpar/: CMakeLists.txt  test_image_par.cpp
utsoa/: CMakeLists.txt  test_image_soa.cpp
(+47 files in other folders)
